adds code for truncated movement plots (fig3). last set of plots are rendering incorrectly in knit doc though (benefits are 0-80% not 0-20% as is coded)

--- a/aqMSfigs.Rmd
+++ b/aqMSfigs.Rmd
@@ -322,7 +322,7 @@ szMgmtBen3<-szMgmtBen2%>%
 szMgmtBenCtchOA<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+#geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("High","Moderate","Low","None"))+#c("None","Low","Moderate","High"))+
   scale_y_continuous(limits = c(9,215))+
   labs(x="",y="\n\n",title = "")+
   theme_bw()+
@@ -337,7 +337,7 @@ szMgmtBenCtchOA<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="oa",],aes(x=mpaSz*100,y=dif
 szMgmtBenCtchCE<-ggplot(szMgmtBen3[szMgmtBen3$mgmt=="ce",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+#geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("High","Moderate","Low","None"))+#c("High","Moderate","Low","None"))+#c("None","Low","Moderate","High"))+
   scale_y_continuous(limits = c(9,215))+
   labs(x="",y="\n\n",title = "Positive impacts\n")+
   theme_bw()+
@@ -372,7 +372,7 @@ szMgmtNeg3<-szMgmtNeg2%>%
 szMgmtNegCtchOA<-ggplot(szMgmtNeg3[szMgmtNeg3$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+#geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("High","Moderate","Low","None"))+#c("None","Low","Moderate","High"))+
   scale_y_continuous(limits = c(9,215))+
   labs(x="",y="\n\n",title = "")+
   theme_bw()+
@@ -388,7 +388,7 @@ szMgmtNegCtchOA<-ggplot(szMgmtNeg3[szMgmtNeg3$mgmt=="oa",],aes(x=mpaSz*100,y=dif
 szMgmtNegCtchCE<-ggplot(szMgmtNeg3[szMgmtNeg3$mgmt=="ce",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
   geom_hline(yintercept = 100,color="gray66")+
   geom_smooth(size=0.8,se=FALSE)+#geom_line(size=0.8)+
-  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_color_manual(values = szCols,name="Adult\nmovement",labels=c("High","Moderate","Low","None"))+#c("None","Low","Moderate","High"))+
   scale_y_continuous(limits = c(9,215))+
   labs(x="",y="\n\n",title = "Negative impacts\n")+
   theme_bw()+
@@ -404,6 +404,115 @@ fig3Plts<-((szMgmtBenCtchCE + szMgmtNegCtchCE)/(szMgmtBenCtchOA + szMgmtNegCtchO
 
 
 fig3Plts
+# (fig2Plts/x_lab2) + plot_layout(heights = c(1,0.05))
+
+```
+
+### Truncate x-axis to 0-20%
+
+```{r}
+
+### Benefits to wild population
+
+szMgmtBen20<-read_csv("runs/movement/farmEq_mpaMgmtAMBen_20.csv")
+
+szMgmtBen202<-szMgmtBen%>%
+  mutate(diffBm=case_when(mgmt == "oa" ~  biomass/as.numeric(nullOA[1,"biomass"]),
+                          TRUE ~ biomass/as.numeric(nullCE[1,"biomass"])),
+         diffCtch=case_when(mgmt=="oa" ~  catch/as.numeric(nullOA[1,"catch"]),
+                          TRUE ~ catch/as.numeric(nullCE[1,"catch"])))
+
+szMgmtBen203<-szMgmtBen202%>%
+  bind_rows(.,zeros)
+
+### open access
+
+szMgmtBenCtchOA20<-ggplot(szMgmtBen203[szMgmtBen203$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+#
+  geom_line(size=0.8)+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(70,160))+
+  labs(x="",y="\n\n",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+### constant effort at MSY
+
+szMgmtBenCtchCE20<-ggplot(szMgmtBen203[szMgmtBen203$mgmt=="ce",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+
+  geom_line(size=0.8)+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(70,160))+
+  labs(x="",y="\n\n",title = "Positive impacts\n")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+goodPlt20<-szMgmtBenCtchOA20 + szMgmtBenCtchCE20
+  # plot_annotation(title = "Adult movement by number of farms - benefits", theme = theme(plot.title = element_text(size = 18)))
+
+########################################################
+### Stress/damage to wild population
+
+szMgmtNeg20<-read_csv("runs/movement/farmEq_mpaMgmtAMNeg_20.csv")
+
+szMgmtNeg202<-szMgmtNeg20%>%
+  mutate(diffBm=case_when(mgmt == "oa" ~  biomass/as.numeric(nullOA[1,"biomass"]),
+                          TRUE ~ biomass/as.numeric(nullCE[1,"biomass"])),
+         diffCtch=case_when(mgmt=="oa" ~  catch/as.numeric(nullOA[1,"catch"]),
+                          TRUE ~ catch/as.numeric(nullCE[1,"catch"])))
+
+szMgmtNeg203<-szMgmtNeg202%>%
+  bind_rows(.,zeros)
+
+### Open access
+
+szMgmtNegCtchOA20<-ggplot(szMgmtNeg203[szMgmtNeg203$mgmt=="oa",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+
+  geom_line(size=0.8)+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",labels=c("None","Low","Moderate","High"))+
+scale_y_continuous(limits = c(70,160))+
+  labs(x="",y="\n\n",title = "")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+
+#constant effort at MSY
+
+szMgmtNegCtchCE20<-ggplot(szMgmtNeg203[szMgmtNeg203$mgmt=="ce",],aes(x=mpaSz*100,y=diffCtch*100,group=aMove,color=as.factor(aMove)))+
+  geom_hline(yintercept = 100,color="gray66")+
+  # geom_smooth(size=0.8,se=FALSE)+
+  geom_line(size=0.8)+
+  scale_color_manual(values = rev(szCols),name="Adult\nmovement",c("None","Low","Moderate","High"))+
+  scale_y_continuous(limits = c(70,160))+
+  labs(x="",y="\n\n",title = "Negative impacts\n")+
+  theme_bw()+
+  theme(plot.title = element_text(hjust = 0.5, size = 16),
+        axis.text=element_text(size=12),
+        axis.title = element_text(size=16),
+        legend.text = element_text(size=12),
+        legend.title = element_text(size=16))
+
+fig3Plts20<-((szMgmtBenCtchCE20 + szMgmtNegCtchCE20)/(szMgmtBenCtchOA20 + szMgmtNegCtchOA20)) +
+  plot_annotation(tag_levels = 'A') + 
+  plot_layout(guides="collect")
+
+
+fig3Plts20
 # (fig2Plts/x_lab2) + plot_layout(heights = c(1,0.05))
 
 ```
